--- a/index.html
+++ b/index.html
@@ -53,7 +53,19 @@
     <script src="js/hansalim copy.js"></script>
 </head>
 <body>
-    <!-- 안내창 -->
+        <!-- 안내창 -->
+        <div class="modal-wrap">
+            <div class="modal-main">
+              <div class="modal-txt">
+                해당 사이트는 스터디용으로 제작되었으며, 모든 리소스의 저작권은
+                원저작자에게 있습니다. <br />
+                * 본 사이트는 Chrome 에 최적화되어 있습니다. <br />
+                * 해당 사이트와 관련한 문제가 있으면 여기로 연락바랍니다
+                <a href="mailto:aaa@aaa.net">여기</a>
+              </div>
+              <button class="modal-close">닫기</button>
+            </div>.
+          </div>
     <!-- 고정메뉴 -->
     <div class="fix-menu">
         <ul class="fix-list">
